--- a/meta/12-5.md
+++ b/meta/12-5.md
@@ -7,31 +7,37 @@ indicator_sort_order: 12-05-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Recyclingquote 
+computation_units: Recyclingquote in % 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Verwertungsquoten Deutschland 
+   value: Quotenvorgabe in % 
+ - field: Verwertungsquoten Deutschland 
+   value: Erreichte Recyclingquote in %
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Auskunft über <a href="https://www.in-kb.de/">Ingolstädter Kommunalbetriebe</a> und Daten über <a href="https://www.umweltbundesamt.de/daten/ressourcen-abfall/verwertung-entsorgung-ausgewaehlter-abfallarten/verpackungsabfaelle#undefined">Umweltbundesamt</a>  # data source  
+source_earliest_available_1: 2022  
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: notapplicable
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Zurzeit sind keine Daten für Ingolstadt vorhanden, da Materialien aus der gesamten Region zusammengeführt werden. <br>
+Konkrete Werte für die Verwertungsquote des gelben Sackes in Ingolstadt liegen nicht vor, da das Material zusammen mit Abfällen aus angrenzenden Landkreises sortiert wird und ein Rückschluss auf den Ursprung nicht mehr möglich ist.<br>
+<br>
+Da davon auszugehen ist, dass die Zusammensetzung des Inhalts des gelben Sacks von Ingolstadt sich nicht wesentlich vom Bundesdurchschnitt unterscheidet, wird dieser dargestellt.<br>
+<br>
+Für Gesamtdeutschland weist das Umweltbundesamt in seinem jährlichen Bericht für 2022 eine für das Sammelgemisch „Leichtverpackungssammlung“ eine erreichte Recyclingquote von 52,3 % aus. Daten für 2023 liegen derzeit noch nicht vor.<br>
+<br>
+Hierbei sind Sammlungen des gelben Sackes und der gelben Tonne zusammengefasst.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K4.2: Förderung der Müllvermeidung und Mülltrennung<br>
