--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href= "https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb">Regionalstatistik</a>
+SOURCE_TYPE: <a href= "https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb">Bayer. Landesamt für Statistik</a>
 
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
