--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Amt für Statistik und Stadtforschung"  # data source  
+SOURCE_TYPE: <a href= "https://www.statistik.bayern.de/produkte/statistik_kommunal/index.html">Bayer. Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
