--- a/meta/4-2.md
+++ b/meta/4-2.md
@@ -20,23 +20,20 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Organisations- und Personalentwicklung, OEPE"   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: "Personalentwicklung der Stadt Ingolstadt"   # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Anzahl der Aus- und Weiterbildungsangebote für städtische Mitarbeitende.
-Stand: 11.04.2023
-Aktuell sind 90 Workshops und Seminare geplant – dazu kommen die Workshops und Seminare auf Anfrage der Ämter
-E-Learning-Angebote gibt es derzeit 160 Kurse WebCampus - WeLEARNING
-Berufsbegleitende Weiterbildungen – aktuell laufen 49 berufsbegleitende Weiterbildungen
-Fachspezifische Fortbildungen (vorwiegend über die Bayerische Verwaltungsschule und andere externe Anbieter) – letztes Jahr waren es insgesamt 610 Inanspruchnahmen auf Anfrage der Mitarbeiter/-innen aus allen Ämtern<br>
+Stand: 13.06.2024
+Die Gesamtzahl jeden Jahres speist sich aus allen Angeboten des Bildungsprogramms der Stadt Ingolstadt, den berufsbegleitenden Weiterbildungen und -qualifizierungen, den Fachspezifischen Fortbildungen, den E-Learning-Angeboten, Teamseminaren und Führungskräfteworkshops.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 W3.2: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
