--- a/meta/2-1.md
+++ b/meta/2-1.md
@@ -16,7 +16,7 @@ computation_units: t, %
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Gerettete Lebensmittel von <a href="https://foodsharing.de/fairteiler?bid=271">Foodsharing Ingolstadt</a>, Abfallmengen von den <a href="https://www.in-kb.de/">Ingolstädter Kommunalbetriebe</a>   # data source  
+SOURCE_TYPE: Gerettete Lebensmittel von <a href="https://foodsharing.de/fairteiler?bid=271">Foodsharing Ingolstadt</a> und <a href="https://www.tafel-in.de/">Tafel Ingolstadt e.V.</a>, Abfallmengen von den <a href="https://www.in-kb.de/">Ingolstädter Kommunalbetriebe</a>   # data source  
 source_earliest_available_1: 2022
 source_periodicity_1: Jährlich
 
@@ -27,9 +27,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing übermittelt. Dabei ist zu beachten, dass diese Daten kein exaktes Bild wiederspiegeln, sondern nur als eine Annäherung zu verstehen sind.<br>
+Der Wert setzt sich zusammen aus der Menge an Rest- und Biomüll eines Jahres in Tonnen, der in Ingolstadt angefallen ist und der Menge an geretteten Lebensmitteln. Die Menge der geretteten Lebensmittel wird von Foodsharing Ingolstadt und der Tafel Ingolstadt e.V. übermittelt. Dabei ist zu beachten, dass diese Daten kein exaktes Bild wiederspiegeln, sondern nur als eine Annäherung zu verstehen sind.<br>
 <br>
-Die Steigerung der geretteten Lebensmittel von 2022 auf 2023 ist dabei insbesondere darauf zurückzuführen, dass Foodsharing neue Kooperationen hinzugewinnen konnte. Die gerettete Ware im Schnitt ist hingegen minimal zurückgegangen.<br>
+Die Steigerung der geretteten Lebensmittel von 2022 auf 2023 ist dabei insbesondere darauf zurückzuführen, dass Foodsharing neue Kooperationen hinzugewinnen konnte. Die gerettete Ware im Schnitt ist hingegen minimal zurückgegangen. Zudem wurde die Menge der geretteten Lebensmittel von der Tafel Ingolstadt e.V. erstmalig für das Jahr 2023 abgefragt. Foodsharing Ingolstadt konnte 2023 somit 106 t an Lebensmitteln retten und die Tafel Ingolstadt e.V. 180 t.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N1.2: Lebensmittelverschwendung vermeiden<br>
