--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -7,23 +7,25 @@ indicator_sort_order: 07-01-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Strom aus Windkraft in Watt je Einwohner/-in 
+computation_units: Watt je Einwohner/-in 
 data_start_values:  # initialize the field to be shown  
- - field: Group 
-   value: Watt 
- - field: Group 
-   value: EW
- - field: Group 
-   value: W/EW 
+ - field: Anlagenart
+   value: Biomasse 
+ - field: Anlagenart 
+   value: Wasserkraft
+ - field: Anlagenart 
+   value: Photovoltaik
+ - field: Anlagenart 
+   value: Gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
 SOURCE_TYPE: "Stadtwerke Ingolstadt" # data source  
-source_earliest_available_1: 2019
+source_earliest_available_1: 2018
 source_periodicity_1: Jährlich
 
 language: de   
@@ -33,8 +35,8 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Strom aus Windkraft in Watt je Einwohner/-in. <br>
-Sinkend, da Leistung gleich, jedoch steigt die Einwohnerzahl. Bayerische Hemmnisse, z.B. 10-H-Regel.<br>
+Strom aus erneuerbaren Energien in Watt je Einwohner/-in. <br>
+Strom aus erneuerbaren Energien wird im Stadtgebiet Ingolstadt aus 5 Biomasseanlagen, 3 Wasserkraftanlagen und 5355 Photovoltaikanlagen gewonnen. Windkraftanlagen sind keine im Stadtgebiet Ingolstadt installiert.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort<br>
