--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -39,7 +39,7 @@
 6-3-title: Nitrat im Grundwasser
 6-4-title: Verhältnis von Trennsystemen zu Mischwasserkanälen
 
-7-1-title: Strom aus Windkraft
+7-1-title: Strom aus erneuerbaren Energien
 7-2-title: Zubau Photovoltaikanlagen in Kilowatt Peak
 7-3-title: CO2e-Emissionen
 
