--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -9,16 +9,24 @@ indicator_sort_order: 07-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Watt je Einwohner/-in 
+computation_units: Watt
 data_start_values:  # initialize the field to be shown  
  - field: Anlagenart
-   value: Biomasse 
+   value: Biomasse in Watt
+ - field: Anlagenart
+   value: Biomasse in Watt/EW
  - field: Anlagenart 
-   value: Wasserkraft
+   value: Wasserkraft in Watt
  - field: Anlagenart 
-   value: Photovoltaik
+   value: Wasserkraft in Watt/EW
  - field: Anlagenart 
-   value: Gesamt
+   value: Photovoltaik in Watt
+ - field: Anlagenart 
+   value: Photovoltaik in Watt/EW
+ - field: Anlagenart 
+   value: Gesamt in Watt
+ - field: Anlagenart 
+   value: Gesamt in Watt/EW
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
