--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -32,7 +32,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Stadtwerke Ingolstadt" # data source  
+SOURCE_TYPE: <a href="https://sw-i.de/strom/">Stadtwerke Ingolstadt</a> # data source  
 source_earliest_available_1: 2018
 source_periodicity_1: Jährlich
 
@@ -44,6 +44,8 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Strom aus erneuerbaren Energien wird im Stadtgebiet Ingolstadt aus 5 Biomasseanlagen, 3 Wasserkraftanlagen und 5355 Photovoltaikanlagen gewonnen. Windkraftanlagen sind keine im Stadtgebiet Ingolstadt installiert.<br>
+<br>
+Stand: 31.12.2023<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort<br>
