--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -103,6 +103,7 @@
 15-3-title: Monitoring der Artenvielfalt (Anzahl geschützter Arten)
 15-4-title: Renaturierte Flächen in ha
 15-5-title: Waldflächenbilanz
+15-6-title: Vertrags-Naturschutzflächen
 
 16-1-title: Anzahl Ehrenamtliche
 16-2-title: Anzahl und Art der informellen Bürger/-innenbeteiligungsverfahren
