--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -21,29 +21,25 @@ national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE: "Agentur für Arbeit"  # data source  
-source_earliest_available_1: 2022
+source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
-- Arzt- und Praxishilfe
-- Medizinisches Laboratorium
-- Gesundh. Krankenpf. Rettungsd. Geburtsh.
-- Human- und Zahnmedizin
-- Tiermedizin und Tierheilkunde
-- Psychologie, nichtärztl. Psychotherapie
-- Nicht ärtzliche Therapie und Heilkunde
-- Pharmazie<br>
+<b>Offene Arbeitsstellen (Arbeitsmarktstatistik)</b>
+•	Definition: Bei Arbeitsstellen handelt es sich um sozialversicherungspflichtige oder geringfügige (Minijobs) oder sonstige (z. B. Praktika- und Traineestellen) Stellen mit einer vorgesehenen Beschäftigungsdauer von mehr als sieben Kalendertagen, die den Agenturen für Arbeit und den Jobcentern in gemeinsamen Einrichtungen mit einem Auftrag zur Besetzung gemeldet werden.
+•	Berichtsjahr: 1. Januar bis 31. Dezember 
+•	Jahreswert: Kumulierte Jahreswerte bei Zugang und Abgang, Jahresdurchschnittswerte beim Bestand.<br>
 <br>
-Unbesetzte betriebliche Berufsausbildungsstellen: Arzt- und Praxishilfe, Gesundh., Krankenpfl, Rettungsd., Geburtsh., Psychologie, nichtärztliche Psychotherapie<br>
-<br>
-(Daten für 2022: Stand 03.2023)  <br>
+<b>Unbesetzte betriebliche Berufsausbildungsstellen (Ausbildungsmarktstatistik)</b>
+•	Definition: Betriebliche Berufsausbildungsstellen sind von ausbildungsberechtigten Betrieben oder Unternehmen angebotene Ausbildungsstellen, wenn die Ausbildung in Betrieben durchgeführt wird (im Gegensatz zu einer außerbetrieblichen Berufsausbildung). Die Statistik kann u.a. über gemeldete sowie unbesetzte Berufsausbildungsstellen berichten. 
+•	Berichtsjahr: 1. Oktober bis 30. September des Folgejahres
+•	Jahreswert: Kumulierte Jahreswerte <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum<br>
