--- a/meta/15-6.md
+++ b/meta/15-6.md
@@ -47,7 +47,7 @@ Auf allen Förderflächen ist Düngung und Pflanzenschutz ausgeschlossen und bis
 Mit dem Vorliegen der ersten Ergebnisse der Stadtbiotopkartierung 2022 wurden gezielt Bewirtschafter für den Abschluss von VNP-Maßnahmen auf wertvollen Flächen angesprochen, um diese zu sichern und weiterzuentwickeln, 
 damit erklärt sich die starke Zunahme 2023 um fast 50 Flächen. Der Anteil an VNP-Flächen entspricht damit knapp 30 % und erfüllt die gesetzliche Vorgabe von 10 %.<br>
 <br>
-Die Fördersumme 2023 lag bei insgesamt 126.862 €. 
+Die Fördersumme 2023 lag bei insgesamt 126.862 €.<br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.4: Schutz und Begünstigung der Biodiversität<br>
