--- a/meta/3-1.md
+++ b/meta/3-1.md
@@ -9,19 +9,21 @@ indicator_sort_order: 03-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Kurzzeit- und Langzeitpflegeplätze 
+computation_units: Anzahl Pflegeangebote 
 data_start_values:  # initialize the field to be shown  
  - field: Pflegeplatzart 
-   value: Langzeitpflegeplätze 
+   value: Langzeitpflegeplätze
+ - field: Pflegeplatzart
+   value: ambulante Pflegeangebote
 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Gesundheitsamt, Stand: April 2023"  # data source  
+SOURCE_TYPE: "Stadt Ingolstadt Bürgerhaus, Stand: Juni 2024"  # data source  
 source_earliest_available_1: 2022
-source_periodicity_1: 
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
@@ -32,7 +34,7 @@ reporting_status: complete
 ---
 Kurzzeitpflege ist dabei auf einen Zeitraum von bis zu acht Wochen im Jahr begrenzt. Im Gegensatz dazu ist mit Langzeitpflege eine dauerhafte Pflege ohne zeitliche Begrenzung gemeint. <br>
 <br>
-Die Zahl der Langzeitpflegeplätze setzt sich aus den vollstationären und den Hospizplätzen zusammen. Kurzzeitpflegeplätze werden vom Ingolstädter Gesundheitsamt derzeit nicht erhoben.<br>
+Die Zahl der Langzeitpflegeplätze setzt sich aus den vollstationären und den Hospizplätzen zusammen. Auf Grund von Personalmangel können derzeit allerdings nicht alle Langzeitpflegeplätze belegt werden. Kurzzeitpflegeplätze können nicht erhoben werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.5: Ermöglichung eines guten Lebens im Alter<br>
