--- a/meta/16-1.md
+++ b/meta/16-1.md
@@ -31,7 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Bürger/-innen mit einer Ehrenamtskarte. Wie viele Ehrenamtliche insgesamt in Ingolstadt aktiv sind / waren, wird derzeit nicht erhoben. Die Bayerische Ehrenamtskarte ist ein sichtbares Zeichen der Anerkennung für besonderes Bürgerschaftliches Engagement. Sie drückt die Wertschätzung für den täglichen Einsatz im Ehrenamt aus, der besonders anerkannt und belohnt werden soll. <br>
+Anzahl der Bürger/-innen mit einer Ehrenamtskarte. Wie viele Ehrenamtliche insgesamt in Ingolstadt aktiv sind / waren, wird derzeit nicht erhoben. Die Bayerische Ehrenamtskarte ist ein sichtbares Zeichen der Anerkennung für besonderes Bürgerschaftliches Engagement. Sie drückt die Wertschätzung für den täglichen Einsatz im Ehrenamt aus, der besonders anerkannt und belohnt werden soll.<br>
+<br>
+Stand: Mai 2024<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.9: Förderung ehrenamtlicher Organisationen<br>
