--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -43,7 +43,7 @@
 7-2-title: Zubau Photovoltaikanlagen in Kilowatt Peak
 7-3-title: CO2e-Emissionen
 
-8-1-title: Aufstocker (Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leistungsbezieher/-innen)
+8-1-title: Erwerbstätige Leistungsberechtigte
 8-2-title: Beschäftigungsquote (15- bis 64-Jährige)
 8-3-title: Bruttoinlandsprodukt
 8-4-title: Drittmittelvolumen der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in EURO
