--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -9,12 +9,28 @@ indicator_sort_order: 16-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Bürger/-innenbeteiligungsverfahren pro 1.000 Einwohner/-innen
+computation_units: Bürger/-innenbeteiligungsverfahren 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Beteiligungsart
+   value: Bürgerumfragen
+ - field: Beteiligungsart
+   value: Bürgerversammlungen
+ - field: Beteiligungsart
+   value: Kinder- und Jugendversammlungen
+ - field: Beteiligungsart
+   value: Infoveranstaltungen
+ - field: Beteiligungsart
+   value: sonstige Bürgerbeteiligung
+ - field: Beteiligungsart
+   value: BZA-Sitzungen
+ - field: Beteiligungsart
+   value: OB im BZA
+ - field: Beteiligungsart
+   value: OB Bürgersprechstunde
+ - field: Beteiligungsart
+   value: Landesgartenschau
+ - field: Beteiligungsart
+   value: Gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
@@ -32,6 +48,8 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Die Stadt Ingolstadt verfügt über ein breites Beteiligungsangebot für Bürger/-innen, die das politische und gesellschaftliche Geschehen der Stadt aktiv mitgestalten möchten. Informationen über das gesamte Angebot als <a href="https://www.ingolstadt.de/output/download.php?fid=3052.1656.1.PDF">PDF</a>. <br>
+<br>
+Eine komplette Übersicht sowie weitere Einzelheiten zu den Beteiligungsverfahren finden Sie auf der <a href="https://ingolstadt-macht-mit.de/">Ingolstädter Beteiligungsplattform</a> und im <a href="https://www4.ingolstadt.de/sessionnet/info.php">Ratsinfoportal der Stadt</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.7: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung<br>
