--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -23,7 +23,7 @@ computation_definitions:
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=21111-107s&bypass=true&levelindex=1&levelid=1665381899858#abreadcrumb">LfStat</a>
 
  # data source  
-source_earliest_available_1: 2019 
+source_earliest_available_1: 2014 
 source_periodicity_1: Jährlich
 
 language: de   
@@ -33,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Anteil Schulabbrechenden ohne Mittelschulabschluss. <br>
+Prozentualer Anteil Schulabbrechenden ohne Hauptschulabschluss. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
