--- a/meta/10-1.md
+++ b/meta/10-1.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "KSS-Monitoring (Kommunale Schulstatistik), Berechnung nach Schuljahren"  # data source  
+SOURCE_TYPE: Schulverwaltungsamt Ingolstadt, "KSS-Monitoring (Kommunale Schulstatistik), Berechnung nach Schuljahren jeweils zum 01.10. d. jew. Schuljahrs"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
