--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -85,7 +85,7 @@
 
 12-1-title: Abfallmenge (private Haushalte)
 12-2-title: Anzahl nachhaltige Kitas (zertifiziert, z.B. Fairtrade)
-12-3-title: Fairtrade-Schools (Anzahl der Schulen mit Zertifizierung)
+12-3-title: Schulen mit Nachhaltigkeits-Zertifizierungen
 12-4-title: Fairtrade-Town (Anzahl der Zertifizierungen)
 12-5-title: Recyclingquote
 12-6-title: Trinkwasserverbrauch - private Haushalte
