--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href= "https://www.ingolstadt.de/Kultur/Bildung-Wissenschaft/Schule-Schulverwaltung/Schulsprengel-Gastschulverh%C3%A4ltnis/">Stadt Ingolstadt</a>
+SOURCE_TYPE: <a href= "https://www.ingolstadt.de/Kultur/Bildung-Wissenschaft/Schule-Schulverwaltung/Schulsprengel-Gastschulverh%C3%A4ltnis/">Stadt Ingolstadt</a>, zuletzt abgerufen über das <a href="https://stadtplan.ingolstadt.de/">Geoportal der Stadt Ingolstadt</a> am 09.07.2024
 
   # data source  
 source_earliest_available_1: 
