--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -38,4 +38,4 @@ Die wohnortnahe Versorgung der Grundschüler/-innen in Bayern regelt die sogenan
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
 <br>
-<b>BNK-Indikator</b>
+<b>BNK-Indikator</b><br>
