--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -62,6 +62,7 @@
 10-5-title: Sprachkenntnisse bei Einschulung (Sprachniveau)
 10-6-title: Einbürgerungen im Jahr
 10-7-title: Wohnfläche (m² je Einwohner/-in) in den 12 Stadtbezirken, Gini-Koeffizient
+10-8-title: Schüler/-innen in Einzelinklusion
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
 11-2-title: Anzahl barrierefreier Bushaltestellen
