--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -9,19 +9,39 @@ indicator_sort_order: 10-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Schulabbrecherquote - Ausländer in Prozent im Verhältnis zur Gesamtabbrecherquote 
+computation_units: Anzahl Personen 
 data_start_values:  # initialize the field to be shown  
- - field: Nationalität 
-   value: Gesamt 
- - field: Nationalität 
-   value: Ausländer 
+ - field: Abschlussart nach Nationalität 
+   value: Deutsche - ohne berufl. Ausbildungsabschluss 
+ - field: Abschlussart nach Nationalität 
+   value: Deutsche - mit anerkanntem Berufsabschluss
+ - field: Abschlussart nach Nationalität 
+   value: Deutsche - mit akademischem Abschluss
+ - field: Abschlussart nach Nationalität 
+   value: Deutsche - gesamt mit und ohne Abschluss
+ - field: Abschlussart nach Nationalität 
+   value: Ausländer - ohne berufl. Ausbildungsabschluss 
+ - field: Abschlussart nach Nationalität 
+   value: Ausländer - mit anerkanntem Berufsabschluss
+ - field: Abschlussart nach Nationalität 
+   value: Ausländer - mit akademischem Abschluss
+ - field: Abschlussart nach Nationalität 
+   value: Ausländer - gesamt mit und ohne Abschluss
+ - field: Abschlussart nach Nationalität 
+   value: Alle - ohne berufl. Ausbildungsabschluss 
+ - field: Abschlussart nach Nationalität 
+   value: Alle - mit anerkanntem Berufsabschluss
+ - field: Abschlussart nach Nationalität 
+   value: Alle - mit akademischem Abschluss
+ - field: Abschlussart nach Nationalität 
+   value: Alle - gesamt mit und ohne Abschluss               
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=21111-107s&bypass=true&levelindex=1&levelid=1665381899858#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
-source_earliest_available_1: 2019
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis/online#astructure">Bayerisches Landesamt für Statistik</a>  # data source  
+source_earliest_available_1: 2013
 source_periodicity_1: Jährlich
 
 language: de   
@@ -31,7 +51,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Schulabbrecherquote ausländischer Schüler im Verhältnis zur Schulabbrecherquote in der Gesamtbevölkerung. Als Schulabbruch wird ein Schulabgang ohne Hauptschulabschluss verstanden. <br>
+Sozialversicherungspflichtig Beschäftigte in Ingolstadt nach höchstem erreichten Ausbildungsabschluss. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
