--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -58,7 +58,7 @@
 10-1-title: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren
 10-2-title: Anzahl der gemeldeten Diskriminierungsfälle
 10-3-title: Beschäftigungsquote - Ausländer
-10-4-title: Schulabbrecherquote - Ausländer
+10-4-title: Höchster erreichter Ausbildungsabschluss
 10-5-title: Sprachkenntnisse bei Einschulung (Sprachniveau)
 10-6-title: Einbürgerungen im Jahr
 10-7-title: Wohnfläche (m² je Einwohner/-in) in den 12 Stadtbezirken, Gini-Koeffizient
