--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -7,7 +7,7 @@ indicator_sort_order: 03-06-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl
 data_start_values:  # initialize the field to be shown  
@@ -20,13 +20,13 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Agentur für Arbeit"  # data source  
+SOURCE_TYPE: "<a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=15024&r_f=by_Ingolstadt&topic_f=gemeldete-arbeitsstellen">Bundesagentur für Arbeit - gemeldete Arbeitsstellen</a> und <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?r_f=by_Ingolstadt&topic_f=ausb-ausbildungsstellenmarkt-mit-zkt">Bundesagentur für Arbeit - Bewerber und Berufsausbildungsstellen</a>"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
