--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -9,18 +9,32 @@ indicator_sort_order: 03-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl
+computation_units: Offene Arbeits- oder Berufsausbildungsstellen
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Arzt- und Praxishilfe
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Medizin. Laboratorium
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Gesund. Krankenpfl. Rettungsd. Geburtsh.
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Human- und Zahnmedizin
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Psychologie u. nichtärztl. -therapie
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: 	Offene Arbeitsstellen nichtärztl. Therapie und Heilkunde
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Pharmazie
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Arbeitsstellen Gesamt
+ - field: Offene Arbeits- oder Berufsausbildungsstellen 
+   value: Offene Berufsausbildungsstellen Arzt- und Praxishilfe 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "<a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=15024&r_f=by_Ingolstadt&topic_f=gemeldete-arbeitsstellen">Bundesagentur für Arbeit - gemeldete Arbeitsstellen</a> und <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?r_f=by_Ingolstadt&topic_f=ausb-ausbildungsstellenmarkt-mit-zkt">Bundesagentur für Arbeit - Bewerber und Berufsausbildungsstellen</a>"  # data source  
+SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?nn=15024&r_f=by_Ingolstadt&topic_f=gemeldete-arbeitsstellen">Bundesagentur für Arbeit - gemeldete Arbeitsstellen</a> und <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?r_f=by_Ingolstadt&topic_f=ausb-ausbildungsstellenmarkt-mit-zkt">Bundesagentur für Arbeit - Bewerber und Berufsausbildungsstellen</a>"  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
