--- a/meta/11-3.md
+++ b/meta/11-3.md
@@ -9,20 +9,20 @@ indicator_sort_order: 11-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Barrierefreiheit in Ingolstadt 
+computation_units: Anzahl fertiggestellter Wohnungen 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: fertiggestellte Wohnungen 
+   value: barrierefreie Wohnungen der GWG 
+ - field: fertiggestellte Wohnungen,Value 
+   value: Wohnungen in Ingolstadt gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: Inklusionsbeauftragte Ingolstadt  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.gemeinnuetzige.de/">Gemeinnützige Wohnungsbaugesellschaft</a> und Amt für Statistik und Stadtforschung der Stadt Ingolstadt  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
@@ -31,7 +31,11 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Anzahl der fertiggestellten barrierefreien Wohnungen durch die Gemeinnützige Wohnungsbausgesellschaft (GWG) / Jahr im Verhältnis zu den fertiggestellten Wohnungen stadtweit in Ingolstadt jährlich.<br>
+<br>
+Dieser Indikator stellt dar, welchen Anteil die GWG gesamtstädtisch an den fertiggestellten Wohnungen hat. Sie gibt keinen Aufschluss darüber, wie viele barriererfreie Wohnungen in Ingolstadt insgesamt fertiggestellt werden.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten<br>
+V1.1: N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
