--- a/meta/9-2.md
+++ b/meta/9-2.md
@@ -9,18 +9,20 @@ indicator_sort_order: 09-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Breitbandversorgung der privaten Haushalte in Prozent 
+computation_units: Breitbandversorgung in Prozent 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
+ - field: Breitbandversorgung 
    value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Breitbandversorgung 
+   value: Freistaat Bayern
+ - field: Breitbandversorgung 
+   value: Bundesrepublik Deutschland   
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+national_geographical_coverage: Ingolstadt, Freistaat Bayern, Bundesrepublik Deutschland 
+computation_definitions: Breitbandversorgung für private Haushalte und Unternehmen
 
-SOURCE_TYPE: ComIN  # data source  
+SOURCE_TYPE: <a href="https://gigabitgrundbuch.bund.de/GIGA/DE/Breitbandatlas/start.html">Gigabitgrundbuch</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,9 +33,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen.<br>
+Unter Breitbandversorgung ist eine Breitbandklasse von 1000 oder mehr MBit/s zu verstehen. Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen. Daher konnte noch kein hundertprozentiger Ausbau erreicht werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächenbedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
 <br>
 <b>BNK-Indikator</b>
