--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -51,7 +51,7 @@
 8-6-title: sv-Beschäftigte (55 Jahre und älter)
 
 9-1-title: Anzahl der angesiedelten Unternehmen in brigk und EGZ
-9-2-title: Breitbandversorgung - private Haushalte
+9-2-title: Breitbandversorgung
 9-3-title: Existenzgründungen
 9-4-title: sv-Beschäftigte mit Hochschulabschluss
 
