--- a/meta/9-2.md
+++ b/meta/9-2.md
@@ -33,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Unter Breitbandversorgung ist eine Breitbandklasse von 1000 oder mehr MBit/s zu verstehen. Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen. Daher konnte noch kein hundertprozentiger Ausbau erreicht werden.<br>
+Dieser Indikator weist die Breitbandversorgung mit einer Breitbandklasse von 1000 oder mehr MBit/s aus, was einer Versorgung mit Glasfasern entspricht. Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen. Daher konnte noch kein hundertprozentiger Ausbau erreicht werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächenbedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
