--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -11,14 +11,14 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl der angesiedelten Unternehmen in brigk und EGZ 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Anzahl angesiedelter Unternehmen 
+   value: brigk 
+ - field: Anzahl angesiedelter Unternehmen 
+   value: EGZ
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der angesiedelten Unternehmen in brigk und EGZ
 
 SOURCE_TYPE: "Existenzgründerzentrum (EGZ) und digitales Gründerzentrum (brigk)"  # data source  
 source_earliest_available_1: 2019
