--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -9,23 +9,19 @@ indicator_sort_order: 04-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
+computation_units: Prozent
 
 data_start_values:  # initialize the field to be shown  
   - field: Einrichtung 
-    value: Gesamt 
-  - field: Einrichtung 
     value: THI
   - field: Einrichtung 
-    value: KU 
-  - field: Einrichtung 
-    value: WFI 
+    value: KU
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anteil der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in Prozent
 
-SOURCE_TYPE: Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt  # data source  
+SOURCE_TYPE: Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt jeweils zum 1.12.  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -36,9 +32,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Studierenden der Technischen Hochschule Ingolstadt (THI), Wirtschaftsfakultät Ingolstadt (WFI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) immer zum 1.12. des jeweiligen Jahres.<br>
+Anteil der ausländischen Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in Prozent<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)<br>
+B2.4: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
