--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -17,7 +17,7 @@
 3-7-title: Vorzeitige Sterblickeit
 3-8-title: Wohnungsnahe Grundversorgung - Krankenhaus
 
-4-1-title: Anzahl der Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
+4-1-title: Ausländische Studierende in Ingolstadt
 4-2-title: Aus- und Weiterbildungsangebote für städtische Mitarbeitende
 4-3-title: Betreuung von Kindern in öff. Kita
 4-4-title: Integrative Kindertageseinrichtungen
