--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -54,6 +54,7 @@
 9-2-title: Breitbandversorgung
 9-3-title: Existenzgründungen
 9-4-title: sv-Beschäftigte mit Hochschulabschluss
+9-5-title: Förderprojekte für technische und digitale Lösungen
 
 10-1-title: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren
 10-2-title: Anzahl der gemeldeten Diskriminierungsfälle
