--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -56,6 +56,7 @@
 9-4-title: sv-Beschäftigte mit Hochschulabschluss
 9-5-title: Förderprojekte für technische und digitale Lösungen
 9-6-title: Finanzielle Beteiligung für Forschung
+9-7-title: EMAS-zertifizierte Betriebsstandorte
 
 10-1-title: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren
 10-2-title: Anzahl der gemeldeten Diskriminierungsfälle
