--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -9,7 +9,7 @@ indicator_sort_order: 08-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Bruttoinlandsprodukt in € 
+computation_units: Euro / EW
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=82711-103&bypass=true&levelindex=1&levelid=1656497199885#abreadcrumb">LfStat</a> # data source  
