--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -14,7 +14,7 @@ data_start_values:  # initialize the field to be shown
  - field: Region 
    value: Ingolstadt 
  - field: Region 
-   value: Bayern 
+   value: Bayern
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
@@ -22,7 +22,7 @@ computation_definitions:
 
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=82711-103&bypass=true&levelindex=1&levelid=1656497199885#abreadcrumb">LfStat</a> # data source  
 
-source_earliest_available_1: 2019
+source_earliest_available_1: 2016
 source_periodicity_1: Jährlich
 
 language: de   
@@ -32,6 +32,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Bruttoinlandsprodukt in € je Einwohner/-in in Ingolstadt.<br>
+Bruttoinlandsprodukt in € je Einwohner/-in in Ingolstadt im Vergleich zum Bruttoinladsprodukt in € je Einwohner/-in in Bayern.<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
