--- a/meta/8-3.md
+++ b/meta/8-3.md
@@ -17,8 +17,8 @@ data_start_values:  # initialize the field to be shown
    value: Bayern
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+national_geographical_coverage: Ingolstadt und Bayern
+computation_definitions: Euro / EW
 
 SOURCE_TYPE: <a href= "https://www.statistikdaten.bayern.de/genesis/online?operation=table&code=82711-103&bypass=true&levelindex=1&levelid=1656497199885#abreadcrumb">LfStat</a> # data source  
 
