--- a/meta/11-3.md
+++ b/meta/11-3.md
@@ -9,16 +9,16 @@ indicator_sort_order: 11-03-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl fertiggestellter Wohnungen 
+computation_units: Anzahl Wohnungen 
 data_start_values:  # initialize the field to be shown  
- - field: fertiggestellte Wohnungen 
+ - field: Wohnungen 
    value: barrierefreie Wohnungen der GWG 
- - field: fertiggestellte Wohnungen,Value 
+ - field: Wohnungen
    value: Wohnungen in Ingolstadt gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der barrierefreien Wohnungen der Gemeinnützige Wohnungsbausgesellschaft (GWG) / Jahr im Verhältnis zu den Wohnungen stadtweit in Ingolstadt
 
 SOURCE_TYPE: <a href="https://www.gemeinnuetzige.de/">Gemeinnützige Wohnungsbaugesellschaft</a> und Amt für Statistik und Stadtforschung der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
@@ -26,12 +26,12 @@ source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der fertiggestellten barrierefreien Wohnungen durch die Gemeinnützige Wohnungsbausgesellschaft (GWG) / Jahr im Verhältnis zu den fertiggestellten Wohnungen stadtweit in Ingolstadt jährlich.<br>
+Anzahl der barrierefreien Wohnungen der Gemeinnützige Wohnungsbausgesellschaft (GWG) / Jahr im Verhältnis zu den Wohnungen stadtweit in Ingolstadt.<br>
 <br>
 Dieser Indikator stellt dar, welchen Anteil die GWG gesamtstädtisch an den fertiggestellten Wohnungen hat. Sie gibt keinen Aufschluss darüber, wie viele barriererfreie Wohnungen in Ingolstadt insgesamt fertiggestellt werden.<br>
 <br>
