--- a/meta/11-3.md
+++ b/meta/11-3.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Anzahl der barrierefreien Wohnungen der Gemeinnützige Wohnungsbausgesellschaft (GWG) / Jahr im Verhältnis zu den Wohnungen stadtweit in Ingolstadt
 
-SOURCE_TYPE: <a href="https://www.gemeinnuetzige.de/">Gemeinnützige Wohnungsbaugesellschaft</a> und Amt für Statistik und Stadtforschung der Stadt Ingolstadt  # data source  
+SOURCE_TYPE: <a href="https://www.gemeinnuetzige.de/">Gemeinnützige Wohnungsbaugesellschaft</a> und <a href="https://www.statistikdaten.bayern.de/genesis/online?operation=result&code=31231-003z&zeitscheiben=11&Regionalmerkmal=KREISE&Regionalschluessel=09161#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: jährlich
 
