--- a/meta/15-4.md
+++ b/meta/15-4.md
@@ -9,18 +9,18 @@ indicator_sort_order: 15-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Fläche in Hektar
+computation_units: Hektar
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Ausgleichsflächen 
+   value: Gartenamt 
+ - field: Ausgleichsflächen 
+   value: Forstamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Hektar
 
-SOURCE_TYPE: Auswertung Statistik der angelegten Ausgleichsflächen des Gartenamtes Ingolstadt  # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Service/Formulare-Adressen/Adressen/Forstamt.php?object=tx,2789.1.1&ModID=9&FID=465.102.1&NavID=2789.804&La=1">Stadt Ingolstadt - Forstamt</a>, <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/Adressen/Gartenamt.php?object=tx,2789.1.1&ModID=9&FID=465.106.1&NavID=2789.173">Stadt Ingolstadt - Gartenamt</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Angelegte Ausgleichsflächen entsprechend den Vorgaben der zur Satzung beschlossenen Bebauungspläne.<br>
+Angelegte Ausgleichsflächen durch das städtische Forstamt als Waldflächen sowie des städtischen Gartenamts.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K4.3: Ressourcenschonender Umgang mit Flächen und Baustoffen – Förderung der Wiederverwendbarkeit und Wiederverwendung von Baustoffen<br>
