--- a/meta/12-6.md
+++ b/meta/12-6.md
@@ -9,7 +9,7 @@ indicator_sort_order: 12-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Liter je Einwohner/-in und Tag 
+computation_units: Liter je EW / Tag 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Liter je EW / Tag
 
-SOURCE_TYPE: Ingolstädter Kommunalbetriebe # data source  
+SOURCE_TYPE: Ingolstädter Kommunalbetriebe und Statistisches Bundesamt # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
