--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -42,6 +42,7 @@
 7-1-title: Strom aus erneuerbaren Energien
 7-2-title: Zubau Photovoltaikanlagen in Kilowatt Peak
 7-3-title: CO2e-Emissionen
+7-4-title: Ladesäuleninfrastruktur
 
 8-1-title: Erwerbstätige Leistungsberechtigte
 8-2-title: Beschäftigungsquote (15- bis 64-Jährige)
