--- a/meta/11-14.md
+++ b/meta/11-14.md
@@ -7,18 +7,18 @@ indicator_sort_order: 11-14-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: bar  # chart types include: bar, line, binary 
+graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Naherholungsflächen mit Wald in Hektar je 1000 Einwohner/-innen 
+computation_units: Hektar (ha)
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Naherholungsflächen 
+   value: ha / 1000 EW 
+ - field: Naherholungsflächen 
+   value: ha gesamt
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Hektar
 
 SOURCE_TYPE: Referat für Stadtentwicklung und Baurecht der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2019
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Rückgang der Fläche pro Einwohner/-in aufgrund Wachstum der Einwohnerzahl. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
+Dieser Indikator weist die Naherholungsflächen mit Wald in Hektar (ha) je 1000 Einwohner/-innen aus sowie die Naherholungsflächen gesamt in Hektar. Aufgrund des Wachstums der Bevölkerung in den letzten Jahren bei nahezu gleichbleibender Naherholungsfläche ist ein Rückgang der Fläche im Verhältnis zur Einwohnerzahl zu verzeichnen. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.7: Naherholung mit ökologischen Aspekten vereinen<br>
