--- a/meta/9-6.md
+++ b/meta/9-6.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Summe finanzielle Beteiligung der Stadt für Forschung in Euro.<br>
+Die Summe der finanziellen Beteiligung der Stadt für Forschung in Euro setzt sich aus den Projekten zusammen, die im Indikator <a href="https://sdg.nachhaltigkeitsagenda-ingolstadt.de/9-5/">9.5 Förderprojekte für technische und digitale Lösungen</a> genannt werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 <br>
