--- a/meta/9-5.md
+++ b/meta/9-5.md
@@ -38,7 +38,7 @@ Zu den Projekten, die 2023 gefördert wurden zählen:<br>
 <ul>
  <li> <a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/Stiftungsprofessuren-und-Absolventenpreise-Toggler.php?object=tx,2789.5.1&ModID=7&FID=3052.19660.1&NavID=2789.411&La=1">Prämierung Absolventenpreis</a></li>
  <li><a href="https://www.exzellenzstiftung-ingolstadt.de/stipendien/research-summer-camp">Ignaz Kögler Exzellenzstiftung Summercamp</a></li>
- <li><a href="https://www.exzellenzstiftung-ingolstadt.de/stipendien/senior-fellow">Ignaz Kögler Exzellenzstiftung Senior Fellowship</a></li>
+ <li><a href="https://www.exzellenzstiftung-ingolstadt.de/stipendien/senior-fellow">Ignaz Kögler Exzellenzstiftung Senior Fellow</a></li>
  <li><a href="https://www.ingolstadt-ifg.de/amiflying">UAM-Netzwerktreffen</a></li>
  <li><a href="https://www.ingolstadt.de/Wirtschaft/Innovation/Urban-Air-Mobility/Drohnentag-in-Ingolstadt.php?object=tx,2789.5&ModID=7&FID=3052.19984.1&NavID=3052.280&La=1">Drohnentag Ingolstadt</a></li>
  <li><a href="https://www.ingolstadt.de/Rathaus/Aktuelles/Aktuelle-Meldungen-Archiv/Stiftungsprofessuren-und-Absolventenpreise-Toggler.php?object=tx,2789.5.1&ModID=7&FID=3052.19660.1&NavID=2789.411&La=1">Stiftungsprofessuren Ingolstadt</a></li>
