--- a/meta/11-9.md
+++ b/meta/11-9.md
@@ -11,10 +11,10 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Flächeninanspruchname in Prozent 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Flächenart 
+   value: Siedlungs-und Verkehrsfläche 
+ - field: Flächenart 
+   value: Vegetation
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Anteil der Siedlungs- und Verkehrsfläche an der Gesamtfläche in Prozent.<br>
+Dieser Indikator zeigt die Anteile der Siedlungs- und Verkehrsfläche sowie der Vegetationsfläche an der Gesamtfläche in Prozent an. Der restliche Flächenanteil teil sich auf die Bereiche Abbauland und Gewässer auf, die mit einem nur geringen Flächenanteil hier vernachlässigbar sind.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
