--- a/meta/11-10.md
+++ b/meta/11-10.md
@@ -9,16 +9,16 @@ indicator_sort_order: 11-10-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Flächenneuinanspruchnahme Prozent 
+computation_units: Prozent
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Flächenart 
+   value: Siedlungs- und Verkehrsfläche
+ - field: Flächenart 
+   value: Vegetation 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Flächenneuinanspruchnahme im vergleich zum Vorjahr in Prozent 
 
 SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=33111-003r&bypass=true&levelindex=1&levelid=1680779324034#abreadcrumb">Bayerisches Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die prozentuale Änderungsrate von Siedlungs- und Verkehrsflächen im Vergleich zum Vorjahr in Prozent. <br>
+Der Indikator zeigt die Die prozentuale Änderungsrate von Siedlungs- und Verkehrsflächen sowie der Vegetationsflächen im Vergleich zum Vorjahr in Prozent an. Die restlichen Flächenanteile teilen sich in Abbauland und Gewässer auf, sind jedoch aufgrund ihres verhältnismäßig kleinen Anteil an der Gesamtfläche vernachlässigbar.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
