--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -9,16 +9,18 @@ indicator_sort_order: 04-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Kinder in öff. Tageseinrichtungen
+computation_units: Anzahl Kinder zwischen 0 und 3 Jahre in öff. Tageseinrichtungen
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Kinder zwischen 0 und 3 Jahre 
+   value: gesamt
+ - field: Kinder zwischen 0 und 3 Jahre 
+   value: mit ausl. Elternteil
+ - field: Kinder zwischen 0 und 3 Jahre 
+   value: ohne ausl. Elternteil    
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl Kinder zwischen 0 und 3 Jahre in öff. Tageseinrichtungen
 
 SOURCE_TYPE: <a href= "https://www.statistik.bayern.de/produkte/statistik_kommunal/index.html">Bayer. Landesamt für Statistik</a>  # data source  
 source_earliest_available_1: 2019
@@ -31,7 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der unter 3-jährigen Kinder in öff. Tageseinrichtungen.<br>
+Der Indikator zeigt die Anzahl der Kinder zwischen 0 und 3 Jahre in öff. Tageseinrichtungen an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
