--- a/meta/3-7.md
+++ b/meta/3-7.md
@@ -9,18 +9,21 @@ indicator_sort_order: 03-07-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl der Todesfälle von Personen unter 70 Jahren.
+computation_units: Anzahl der Todesfälle von Personen unter 70 Jahren
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Geschlecht 
+   value: gesamt 
+ - field: Geschlecht 
+   value: männlich
+ - field: Geschlecht 
+   value: weiblich
+
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt
-computation_definitions: 
+computation_definitions: Anzahl der Todesfälle von Personen unter 70 Jahren
 
-SOURCE_TYPE: "Bayer. Landesamt für Statistik/ 2021: Melderegister"   # data source  
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis/online?operation=statistic&levelindex=0&levelid=1723467462443&code=12613#abreadcrumb">Bayer. Landesamt für Statistik</a>   # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,7 +34,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Todesfälle von Personen unter 70 Jahren. <br> 
+Anzahl der Todesfälle von Personen unter 70 Jahren. Zwischen 2020 und 2022 ist eine erhöhte vorzeitige Sterblichkeit festzustellen, die  u.a. auf die Corona-Pandemie zurückzuführen ist. <br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N2.5: Ermöglichung eines guten Lebens im Alter<br>
