--- a/meta/11-17.md
+++ b/meta/11-17.md
@@ -7,7 +7,7 @@ indicator_sort_order: 11-17-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: bar  # chart types include: bar, line, binary 
+graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl der PKW je 1.000 EW
 data_start_values:  # initialize the field to be shown  
@@ -18,9 +18,9 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Anzahl der PKW je 1.000 EW
 
-SOURCE_TYPE: Amt für Statistik und Stadtforschung  # data source  
+SOURCE_TYPE: <a href="https://www.kba.de/DE/Statistik/Fahrzeuge/Bestand/ZulassungsbezirkeGemeinden/zulassungsbezirke_node.html?yearFilter=2024">Kraftfahrtbundesamt</a>  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatten eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.<br>
+Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatte eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.2: Reduktion des motorisierten Individualverkehrs<br>
